--- a/R/Simulated Data Analysis.Rmd
+++ b/R/Simulated Data Analysis.Rmd
@@ -37,14 +37,29 @@ red_herring <- read_rds(here("data", "red herring.rds"))
 ## Fit models
 
 ```{r}
-null.pcas.try <- map(null, ~try(opls(select(., -group), plotL = FALSE, printL = FALSE)))
-null.pcas <- null.pcas.try[!map_lgl(null.pcas.try, ~inherits(., "try-error"))]
-length(null.pcas)
+#create "safe" version of opls() which returns NULL if it errors
+safe_opls <- possibly(opls, otherwise = NULL)
 
-needle.pcas.try <- map(needle_in_haystack, ~try(opls(select(., -group), plotL = FALSE, printL = FALSE)))
-needle.pcas <- needle.pcas.try[!map_lgl(needle.pcas.try, ~inherits(., "try-error"))]
+# map to all datasets in null scenario
+null.pcas.try <-
+  map(null,
+      ~safe_opls(select(., -group), plotL = FALSE, printL = FALSE))
+null.pcas.failed <- map_lgl(null.pcas.try, is.null)
+null.pcas <- null.pcas.try[!null.pcas.failed]
 
-herring.pcas <- map(red_herring, ~try(opls(select(., -group), plotL = FALSE, printL = FALSE)))
+# map to all datasets in needle in a haystack scenario
+needle.pcas.try <-
+  map(needle_in_haystack,
+      ~safe_opls(select(., -group), plotL = FALSE, printL = FALSE))
+needle.pcas.failed <- map_lgl(needle.pcas.try, is.null)
+needle.pcas <- needle.pcas.try[!needle.pcas.failed]
+
+# map to all datasets in red herring scenario
+herring.pcas.try <-
+  map(red_herring,
+      ~safe_opls(select(., -group), plotL = FALSE, printL = FALSE))
+herring.pcas.failed <- map_lgl(herring.pcas.try, is.null)
+herring.pcas <- herring.pcas.try[!herring.pcas.failed]
 ```
 
 ## Create confusion dataframes
@@ -60,24 +75,21 @@ map(needle.pcas,
       .$plot_data)
 
 needle.cors <-
-  map2(.x = needle.scores,
+  map2(.x = needle.pcas,
        #filter .y by getting rid of models that didn't run
-       .y = needle_in_haystack[!map_lgl(needle.pcas.try, ~inherits(., "try-error"))], 
-       ~ cor(.x[2:3], select(.y, -group)) %>% 
+       .y = needle_in_haystack[!needle.pcas.failed], 
+       ~ cor(get_scores(.x)[2:3], select(.y, -group)) %>% 
          t() %>% 
          as.data.frame() %>% 
-         rownames_to_column("Variable"))
-
-needle.dist <-
-  map(needle.cors,
-      ~ rowwise(.) %>% 
+         rownames_to_column("Variable")) %>% 
+  map(~ rowwise(.) %>% 
         mutate(distance = sqrt(sum((c(p1, p2) - c(0, 0))^2))) %>% 
         mutate(detect_discr = ifelse(distance > 0.5, TRUE, FALSE),
                is_discr = ifelse(str_detect(Variable, "discr"), TRUE, FALSE))
         )
 
 needle.pca.k <- 
-  map_dfr(needle.dist,
+  map_dfr(needle.cors,
       ~ select(., detect_discr, is_discr) %>%
         as.matrix() %>%
         cohen.kappa() %>%
