--- a/R/Simulated Data Analysis.Rmd
+++ b/R/Simulated Data Analysis.Rmd
@@ -13,7 +13,7 @@ For each dataset in each of the three scenarios I:
     + calculate distance between centriods in score plots for PCA and PLS-DA for all datasets
     
     
-# Packages
+# Packages and Functions
 
 ```{r}
 library(here)
@@ -22,6 +22,10 @@ library(ropls)
 library(psych) #for cohen.kappa()
 library(tidyverse)
 ```
+```{r}
+#create "safe" version of opls() which returns NULL if it errors
+safe_opls <- possibly(opls, otherwise = NULL)
+```
 
 # Load Data
 
@@ -29,77 +33,24 @@ library(tidyverse)
 null <- read_rds(here("data", "null.rds"))
 needle_in_haystack <- read_rds(here("data", "needle.rds"))
 red_herring <- read_rds(here("data", "red herring.rds"))
+control <- read_rds(here("data", "control.rds"))
 ```
 
 
-# PCAs
+# Control
 
-## Fit models
+## Fit PCA models
 
 ```{r}
-#create "safe" version of opls() which returns NULL if it errors
-safe_opls <- possibly(opls, otherwise = NULL)
-
 # map to all datasets in null scenario
-null.pcas.try <-
-  map(null,
+control.pcas.try <-
+  map(control,
       ~safe_opls(select(., -group), plotL = FALSE, printL = FALSE))
-null.pcas.failed <- map_lgl(null.pcas.try, is.null)
-null.pcas <- null.pcas.try[!null.pcas.failed]
-
-# map to all datasets in needle in a haystack scenario
-needle.pcas.try <-
-  map(needle_in_haystack,
-      ~safe_opls(select(., -group), plotL = FALSE, printL = FALSE))
-needle.pcas.failed <- map_lgl(needle.pcas.try, is.null)
-needle.pcas <- needle.pcas.try[!needle.pcas.failed]
-
-# map to all datasets in red herring scenario
-herring.pcas.try <-
-  map(red_herring,
-      ~safe_opls(select(., -group), plotL = FALSE, printL = FALSE))
-herring.pcas.failed <- map_lgl(herring.pcas.try, is.null)
-herring.pcas <- herring.pcas.try[!herring.pcas.failed]
+control.pcas.failed <- map_lgl(control.pcas.try, is.null)
+control.pcas <- control.pcas.try[!control.pcas.failed]
 ```
 
-## Create confusion dataframes
-
-I'm actually not sure what this means for the null scenario, so I skip for now.
-
-I should write functions for all this shit and source it and then just map the functions.
-
-```{r}
-needle.scores <- 
-map(needle.pcas,
-    ~ get_plotdata(.) %>% 
-      .$plot_data)
-
-needle.cors <-
-  map2(.x = needle.pcas,
-       #filter .y by getting rid of models that didn't run
-       .y = needle_in_haystack[!needle.pcas.failed], 
-       ~ cor(get_scores(.x)[2:3], select(.y, -group)) %>% 
-         t() %>% 
-         as.data.frame() %>% 
-         rownames_to_column("Variable")) %>% 
-  map(~ rowwise(.) %>% 
-        mutate(distance = sqrt(sum((c(p1, p2) - c(0, 0))^2))) %>% 
-        mutate(detect_discr = ifelse(distance > 0.5, TRUE, FALSE),
-               is_discr = ifelse(str_detect(Variable, "discr"), TRUE, FALSE))
-        )
-
-needle.pca.k <- 
-  map_dfr(needle.cors,
-      ~ select(., detect_discr, is_discr) %>%
-        as.matrix() %>%
-        cohen.kappa() %>%
-        .$kappa %>%
-        data_frame(pca.k = .),
-      .id = "dataset")
-```
-
-
-# PLS-DAs
+## Fit PLS models
 
 - Not increasing the number of permutation for now, because I'm not concerned about p-values yet.
 - Many models fail for the null, which makes sense.  What to do?
@@ -111,13 +62,78 @@ needle.pca.k <-
 Currently, this just picks the ones that worked (at least one component built)
 
 ```{r}
-null.pls <- map(null, ~try(opls(select(., -group), .$group, plotL = FALSE, printL = FALSE)))
+control.pls.try <-
+  map(control,
+      ~ safe_opls(select(., -group), .$group, plotL = FALSE, printL = FALSE))
+control.pls.failed <- map_lgl(control.pls.try, is.null)
+control.pls <- control.pls.try[!control.pls.failed]
+```
 
-null.pls <- null.pls[!map_lgl(null.pls, ~inherits(., "try-error"))]
-length(null.pls)
+## Calculate Cohen's Kappa
 
-needle.pls <- map(needle_in_haystack, ~opls(select(., -group), .$group, plotL = FALSE, printL = FALSE))
+- For PCA, I'm defining an "important" variable as one with a correlation to PC1 > 0.5 or  < -0.5
+- For PLS, an "important" variable is one with a VIP score > 1
 
-herring.pls <- map(red_herring, ~opls(select(., -group), .$group, plotL = FALSE, printL = FALSE))
+### PCA kappas
+
+```{r message=FALSE, warning=FALSE}
+# Get correlations
+control.cors <-
+  map2(.x = control.pcas,
+       #filter .y by getting rid of models that didn't run
+       .y = control[!control.pcas.failed], 
+       #correlation between axis scores and data
+       ~ cor(get_scores(.x)[2:3], select(.y, -group)) %>% 
+         t() %>% 
+         as_data_frame(rownames = "Variable")) %>% 
+  # calculate distance from center in correlation units for each variable
+  map(~ rowwise(.) %>% 
+        mutate(distance = sqrt(sum((c(p1, p2) - c(0, 0))^2))) %>% 
+        # if corr distance > 0.5, then its "important" variable
+        mutate(#detect_discr = ifelse(distance > 0.5, TRUE, FALSE),
+               detect_discr = ifelse(abs(p1) > 0.5, TRUE, FALSE),
+               is_discr = ifelse(str_detect(Variable, "discr"), TRUE, FALSE))
+        )
+
+# calculate kappa
+control.pca.k <- 
+  map_dfr(control.cors,
+      ~ select(., detect_discr, is_discr) %>%
+        as.matrix() %>%
+        cohen.kappa() %>%
+        .$kappa %>%
+        data_frame(pca.k = .),
+      .id = "dataset")
+```
+
+
+### PLS-DA kappas
+```{r message=FALSE, warning=FALSE}
+# Get VIP scores
+control.vips <-
+  map(control.pls,
+      ~ get_VIP(.) %>% 
+        mutate(detect_discr = ifelse(VIP > 1, TRUE, FALSE),
+               is_discr = ifelse(str_detect(Variable, "discr"), TRUE, FALSE)))
+
+control.pls.k <- 
+  map_dfr(control.vips,
+      ~ select(., detect_discr, is_discr) %>%
+        as.matrix() %>%
+        cohen.kappa() %>%
+        .$kappa %>%
+        data_frame(pls.k = .),
+      .id = "dataset")
+```
+
+### Join all kappas
+
+```{r}
+control.k <- full_join(control.pca.k, control.pls.k)
+```
+```{r}
+ggplot(control.k) +
+  geom_density(aes(x = pls.k), fill = "red", alpha = 0.5) +
+  geom_density(aes(x = pca.k), fill = "blue", alpha = 0.5)
 ```
 
